--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -62,6 +62,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:autofillHints="Email"
+                    android:id="@+id/loginEmailId"
                     android:background="@android:color/transparent"
                     android:fontFamily="@font/poppins_semibold"
                     android:inputType="textEmailAddress"
@@ -103,6 +104,7 @@
                         android:layout_marginTop="10dp"
                         android:layout_weight="3"
                         android:autofillHints="Password"
+                        android:id="@+id/loginPassword"
                         android:background="@android:color/transparent"
                         android:fontFamily="@font/poppins_semibold"
                         android:inputType="textPassword"
@@ -182,14 +184,16 @@
                         android:src="@drawable/twitter_icon"
                         tools:ignore="ImageContrastCheck" />
 
-                    <ImageView
-                        android:id="@+id/proceed"
+                    <ImageButton
+                        android:id="@+id/loginButton"
+                        android:alpha="0.8"
                         android:layout_width="45dp"
                         android:layout_height="45dp"
                         android:layout_marginTop="20dp"
                         android:layout_weight="1"
+                        android:background="@drawable/black_arrow"
                         android:contentDescription="@string/proceed"
-                        android:src="@drawable/black_arrow" />
+                        />
 
                 </LinearLayout>
 
