--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -74,6 +74,7 @@
                 <EditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:id="@+id/email"
                     android:layout_marginTop="10dp"
                     android:autofillHints="Email"
                     android:background="@android:color/transparent"
@@ -114,6 +115,7 @@
                     <EditText
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:id="@+id/password"
                         android:layout_marginTop="10dp"
                         android:layout_weight="3"
                         android:autofillHints="Password"
@@ -168,6 +170,7 @@
                     <EditText
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:id="@+id/confirm_password"
                         android:layout_marginTop="10dp"
                         android:layout_weight="3"
                         android:autofillHints="Password"
@@ -250,6 +253,7 @@
                 <EditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:id="@+id/first_name"
                     android:layout_marginTop="10dp"
                     android:autofillHints="Email"
                     android:background="@android:color/transparent"
@@ -285,6 +289,7 @@
                 <EditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:id="@+id/last_name"
                     android:layout_marginTop="10dp"
                     android:autofillHints="Last Name"
                     android:background="@android:color/transparent"
@@ -321,8 +326,9 @@
                 <EditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:id="@+id/contact_no"
                     android:layout_marginTop="10dp"
-                    android:autofillHints="Password"
+                    android:autofillHints="phone"
                     android:background="@android:color/transparent"
                     android:fontFamily="@font/poppins_semibold"
                     android:inputType="phone"
@@ -391,8 +397,8 @@
                 <EditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:id="@+id/add_line1"
                     android:layout_marginTop="10dp"
-                    android:autofillHints="Email"
                     android:background="@android:color/transparent"
                     android:fontFamily="@font/poppins_semibold"
                     android:inputType="text"
@@ -453,6 +459,7 @@
                     <EditText
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:id="@+id/pin_code"
                         android:layout_marginTop="10dp"
                         android:layout_marginEnd="10dp"
                         android:layout_weight="1"
@@ -473,6 +480,7 @@
                     <EditText
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:id="@+id/city"
                         android:layout_marginStart="20dp"
                         android:layout_marginTop="10dp"
                         android:layout_weight="1"
@@ -553,6 +561,7 @@
                     <EditText
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:id="@+id/state"
                         android:layout_marginTop="10dp"
                         android:layout_marginEnd="10dp"
                         android:layout_weight="1"
@@ -572,6 +581,7 @@
                     <EditText
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:id="@+id/country"
                         android:layout_marginStart="20dp"
                         android:layout_marginTop="10dp"
                         android:layout_weight="1"
