--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -157,6 +157,7 @@
                     android:orientation="horizontal">
 
                     <ImageView
+                        android:id="@+id/google_sign"
                         android:layout_width="60dp"
                         android:layout_height="60dp"
                         android:layout_marginTop="25dp"
